applications/RichesBank/local/k8s/riches_namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: riches
  labels:
    name: riches
