applications/RichesBank/local/k8s/riches_ingress.yaml
# 아래와 같이 실행할 것
# 1. ACM에서 Certificate ARN 확인
# 2. export CERTIFICATE_ARN=<CERTIFICATE_ARN>
# 3. cat riches_ingress.yaml | envsubst | kubectl apply -f -
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # Kubernetest EKS ALB Annotation URL
    # https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/ingress/annotation/
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.redirect-to-https: >
      {"Type":"redirect","RedirectConfig":{"Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_302"}}
    alb.ingress.kubernetes.io/certificate-arn: ${CERTIFICATE_ARN}
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /riches/login/Login.action
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/success-codes: 200,201,302
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=86400
  labels:
    run: riches
  name: riches-ingress
  namespace: riches
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "riches-service"
                port:
                  number: 8080
#              servicePort: 8080
        #- path: /*
        #  backend:
        #    serviceName: "riches-service"
        #    servicePort: 8080
